fix(progress): mouse-time-display overlaps the play-progress svg icon (#8338)
When the mouse hovers over the `play-progress` svg icon,
the `mouse-time-display` bar appears above it.

- adds `z-index` to avoid overlap

--- a/src/css/components/_progress.scss
+++ b/src/css/components/_progress.scss
@@ -95,6 +95,7 @@
   height: 1em;
   pointer-events: none;
   line-height: 0.15em;
+  z-index: 1;
 }
 
 .video-js .vjs-load-progress {
